# StereoVision

./: .gitignore  gitignore
AutoCalibration/: BA.cpp  CMakeLists.txt  autoCalibration.cpp  autoCalibration.h  functions.cpp  functions.h  main.cpp  test.cpp
Calibration/: fileShave.py  functions.py  gitcode.py  intr_apriltags.py  intr_calibration.py  stereoCalibrate.py  stereoCheckerboard.py  stereocalib_cornerExtract.py  test.py
Calibration/files/: BB_right_PG.mat  D_l2.txt  D_r2.txt  K_l2.txt  K_r2.txt  cornerMartin.txt  cornersRight.txt  stereo_LEFT_BB_right_RIGHT_IR_PG_IR.mat
Calibration/imgs/mono_calib/left/: chessboards.npz
Calibration/imgs/mono_calib/right/: chessboards.npz
GlassTest/: CMakeLists.txt  main.cpp
Spinnaker/.catkin_tools/profiles/default/: devel_collisions.txt
Spinnaker/devel/: .catkin  .rosinstall  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
Spinnaker/devel/.private/camera_calibration/: .catkin  .rosinstall  setup.sh
Spinnaker/devel/.private/catkin_tools_prebuild/: .catkin  _setup_util.py  (+1 more)
Spinnaker/logs/spinnaker_sdk_camera_driver/: build.cmake.000.log.stderr  build.make.003.log.stderr  build.make.006.log.stderr  build.make.018.log.stderr
Spinnaker/logs/stereo_image_proc/: build.make.014.log.stderr  build.make.027.log.stderr
autoCalib_ws/devel/: .catkin  setup.sh
autoCalib_ws/src/calibration/: CMakeLists.txt  package.xml
autoCalib_ws/src/cv_bridge/: CMakeLists.txt
autoCalib_ws/src/speak_listen/: CMakeLists.txt  package.xml
catkin_ws/devel/: .catkin  local_setup.sh
test/: CMakeLists.txt  main.cpp
(+259 files in other folders)
